--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
+        "jquery": "^3.6.4",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
@@ -17,6 +18,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
-        "@selectize/selectize": "^0.15.2"
+        "@selectize/selectize": "^0.15.2",
+        "magnific-popup": "^1.1.0"
     }
 }
