--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "__list commands run on docker__": "echo __list commands run on docker__",
+        "docker-dev": "docker exec -it prompt-journey-lavavel_pj-app_1 npm run dev",
+        "docker-build": "docker exec -it prompt-journey-lavavel_pj-app_1 npm run build",
+        "docker-optimize_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan optimize:clear",
+        "docker-cache_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan cache:clear",
+        "docker-config_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan config:clear"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
-        "jquery": "^3.6.4",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
@@ -19,6 +24,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
         "@selectize/selectize": "^0.15.2",
-        "magnific-popup": "^1.1.0"
+        "jquery": "^3.6.4",
+        "magnific-popup": "^1.1.0",
+        "sortablejs": "^1.15.0"
     }
 }
