--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "docker up": "docker-compose up -d",
         "dev": "vite",
         "build": "vite build",
         "__list commands run on docker__": "echo __list commands run on docker__",
