--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "docker-build": "docker exec -it prompt-journey-lavavel_pj-app_1 npm run build",
         "docker-optimize_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan optimize:clear",
         "docker-cache_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan cache:clear",
-        "docker-config_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan config:clear"
+        "docker-config_clear": "docker exec -it prompt-journey-lavavel_pj-app_1 php artisan config:clear",
+        "docker-reset-permission": "docker exec -it prompt-journey-lavavel_pj-app_1 chown -R sail:sail /var/www/html/"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
