--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
