--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
-        "laravel/tinker": "^2.7",
-        "torann/geoip": "^3.0"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
         "laravel/pint": "^1.0",
