--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "stevebauman/location": "^6.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
