--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "docker-cache_clear": "docker exec -it prompt-journey-app php artisan cache:clear",
         "docker-config_clear": "docker exec -it prompt-journey-app php artisan config:clear",
         "docker-reset-permission": "docker exec -it prompt-journey-app chown -R sail:sail /var/www/html/",
-        "docker npm i": "docker exec -it prompt-journey-app npm i"
+        "docker npm i": "docker exec -it prompt-journey-app npm i",
+        "docker db re-seed": "docker exec -it prompt-journey-app  php artisan migrate:refresh --seed"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
