- add dusk user testing - added some text and seo stuff to front page - some minor fixes

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "docker up": "docker-compose up -d",
+        "local mysql stop": "sudo /etc/init.d/mysql stop",
         "dev": "vite",
         "build": "vite build",
         "__list commands run on docker__": "echo __list commands run on docker__",
