--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
+        "php-webdriver/webdriver": "^1.14",
         "stevebauman/location": "^6.6"
     },
     "require-dev": {
