security updates fo composer update laravel/passport to v11.8.8

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "guzzlehttp/guzzle": "^7.5",
         "laravel/cashier": "^14.9",
         "laravel/framework": "^9.19",
-        "laravel/passport": "^11.8",
+        "laravel/passport": "11.8.8",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
